functional dynamic glider for squares

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src = "./main.js"></script>
     <link rel = "stylesheet" href = "./style.css">
     <title>Etch-A-Sketch</title>
 </head>
@@ -12,15 +11,19 @@
         <div class = "mid">
             <div class = "left box"></div>
             <div class = "right menu">
-                 <input class = "color" type = "color" >
+                 <input class = "color" type = "color" value = "#4E6E58">
                  <button id ="sketch">Sketch</button>
                  <button id ="erase">Erase</button>
                  <button id = "rainbow">Rainbow</button>                   
                  <button id ="clear">Clear</button>
-                 <input class="glider" type = "range" step = "10">
+                 <div id = "sizeValue">50 x 50</div>
+                 <input id="glider" type = "range" step = "10" min = "0"  max ="100">
             </div>
         </div>
         <div class ="bottom">Project By YMB</div>
     
+
+
+    <script src = "./main.js"></script>
 </body>
 </html>
