--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                  <button id ="sketch">Sketch</button>
                  <button id ="erase">Erase</button>
                  <button id = "rainbow">Rainbow</button>                   
-                 <button id ="clear">Clear</button>
-                 <div id = "sizeValue">50 x 50</div>
-                 <input id="glider" type = "range" step = "10" min = "0"  max ="100">
+                 <button id ="clear">New</button>
+                 <div id = "sizeValue">5 x 5</div>
+                 <input id="glider" type = "range" min = "0"  max ="10" >
             </div>
         </div>
         <div class ="bottom">Project By YMB</div>
