add color change function, version one ok

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                  <button id ="sketch">Sketch</button>
                  <button id ="erase">Erase</button>
                  <button id = "rainbow">Rainbow</button>                   
-                 <button id ="clear">New</button>
+                 <button id ="clear">Reset</button>
                  <div id = "sizeValue">5 x 5</div>
                  <input id="glider" type = "range" min = "0"  max ="10" >
             </div>
